@@ -64,6 +64,7 @@
 
 (create-configuration-menu)
 
+(add-menu-key 'help-menu "a" 'show-first-aid-kit)
 (add-menu-key 'help-menu "h" 'show-global-key-binding)
 (add-menu-key 'help-menu "b" 'show-main-mode-key-binding)
 (add-menu-key 'help-menu "s" 'show-second-mode-key-binding)
